// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagsCloud > should render correctly with active tag (snapshot) 1`] = `
<div>
  <div>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(245, 159, 0);"
    >
      <a
        href="/tag/JavaScript"
      >
        JavaScript
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/Web Development"
      >
        Web Development 30
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/Frontend Development"
      >
        Frontend Development 20
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/React"
      >
        React 5
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        href="/tag/Redux"
      >
        Redux 1
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(22, 119, 255);"
    >
      <a
        href="/tags"
      >
        All
      </a>
    </span>
  </div>
</div>
`;

exports[`TagsCloud > should render correctly without active tag (snapshot) 1`] = `
<div>
  <div>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(112, 72, 232);"
    >
      <a
        href="/tag/Web Development"
      >
        Web Development 30
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(55, 178, 77);"
    >
      <a
        href="/tag/Frontend Development"
      >
        Frontend Development 20
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(245, 159, 0);"
    >
      <a
        href="/tag/JavaScript"
      >
        JavaScript 10
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(22, 119, 255);"
    >
      <a
        href="/tag/React"
      >
        React 5
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color _link_7b1cdc dark:hover:shadow-primary md:mb-3 md:text-lg"
      style="background-color: rgb(22, 119, 255);"
    >
      <a
        href="/tag/Redux"
      >
        Redux 1
      </a>
    </span>
  </div>
</div>
`;
